Corrects the spacing issue on the home page

--- a/wp-content/themes/multunus/sass/custom/_home.scss
+++ b/wp-content/themes/multunus/sass/custom/_home.scss
@@ -533,9 +533,6 @@
     .talks {
       margin-top: 30px;
     }
-  } 
-  h1 {
-    margin-top: 50px;
   }
   .heart {
     width: 30px;
